--- a/backend/package.json
+++ b/backend/package.json
@@ -1,24 +1,19 @@
 {
-  "name": "dragon_store",
+  "name": "backend",
   "version": "1.0.0",
   "private": true,
   "main": "index.js",
   "scripts": {
-    "front": "yarn --cwd ./front start",
-    "backend": "yarn --cwd ./backend start",
-    "start": "concurrently --kill-others-on-fail \"yarn front\" \"yarn backend\""
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
-  "workspaces": [
-    "front",
-    "backend"
-  ],
   "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.6.0",
-    "concurrently": "^3.5.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -31,11 +26,5 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.2",
     "sequelize": "^6.3.5"
-  },
-  "description": "",
-  "devDependencies": {
-    "eslint": "^7.18.0",
-    "eslint-plugin-react": "^7.22.0",
-    "concurrently": "^3.5.1"
   }
 }
