--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 # dependencies
 /.vscode
 /node_modules
-/front/node_modules
+/frontend/node_modules
 /backend/node_modules
 /backend/node_modules/*
 /.pnp
@@ -26,12 +26,12 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .env
-front/public/images/*
+frontend/public/images/*
 backend/config/env.js
 backend/data.js
 .eslintrc.js
-front/.eslintcache
+frontend/.eslintcache
 backend/resources/*
 dragonstore.code-workspace
-front/src/setupTests.js
-front/src/__tests__/*
+frontend/src/setupTests.js
+frontend/src/__tests__/*
